# tls

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  justfile  pyproject.toml  rustfmt.toml
.codex/: AGENTS.md
.github/actions/setup/: action.yml
.github/workflows/: build.yml  ci-workflows.yml  run-linters.yml  run-tests.yml
dev/mocks/: __init__.py  llm.py  reporter.py
src/: commands.rs  error.rs  gateway.rs  lib.rs  main.rs  model.rs  scaffold.rs  storage.rs
src/core/: add_item.rs  delete_item.rs  evaluator.rs  list_items.rs  mod.rs  reporter.rs  runner.rs  test_support.rs
src/tls/: __init__.py  __main__.py  context.py  errors.py  main.py
src/tls/commands/: __init__.py  init.py  run.py
src/tls/config/: __init__.py  settings.py  templates.py
src/tls/core/: __init__.py  container.py
src/tls/models/: __init__.py  benchmark.py  project_config.py  report.py
src/tls/protocols/: __init__.py  llm.py  reporter.py
src/tls/services/: __init__.py  executor.py  initializer.py  llm_client.py  reporter.py
tests/: cli_commands.rs  cli_flow.rs  commands_api.rs  commands_core.rs  conftest.py  init.rs  run.rs  run_eval_report.rs
tests/common/: mod.rs
tests/intg/: conftest.py  test_cli.py
tests/unit/: conftest.py  test_models.py  test_services.py
