[project]
name = "tls"
version = "0.1.3"
description = "A Python CLI tool for LLM benchmarking and evaluation."
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv==1.0.1",
    "rich>=14.0.0",
    "typer>=0.12.0",
]

[project.scripts]
tls = "tls.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.1",
    "mypy>=1.8.0",
    "types-aiofiles>=25.1.0.20251011",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tls"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [".", "dev"]
addopts = "-q -s --tb=short"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "migrations",
    "db.sqlite3",
    "*.pyc",
    ".uv-cache",
    ".cache",
    "*/.cache/*",
    ".venv",
    "venv",
    "env",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
pythonpath = ["."]
